# chip-8

./: Cargo.toml  README.md
src/: bit_splitter.rs  emulator.rs  instruction.rs  lib.rs  main.rs  termion_io.rs
src/emulator/: emulator.rs  input.rs  instruction.rs  key_manager.rs  mod.rs  output.rs
src/util/: bit_splitter.rs  mod.rs
