[package]
name = "chip-8"
version = "0.1.0"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
proptest = "0.10.0"
rand = "0.7.3"
termion = "1.5.5"
log = "0.4.11"
log4rs = "0.13.0"