[package]
name = "chip-8"
version = "0.1.0"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
rand = "0.7.3"
crossterm = "0.17.7"
log = "0.4.11"
env_logger = "0.7.1"

[dev-dependencies]
proptest = "0.10.0"
test-case = "1.0.0"
pretty_assertions = "0.6.1"